--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:usesCleartextTraffic="true"
-        android:label="Health Guide"
+        android:label="Clinic"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
