--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   markdown: ^7.3.0
   url_launcher: ^6.3.2
 
+  # Firebase Cloud Messaging
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
+  permission_handler: ^11.3.1
+
 dev_dependencies:
   build_runner: ^2.4.12
   freezed: ^2.5.2
